# StellarBootcamp

./: .gitignore  README.md  cargo.toml  deno.json
soroban/: README.md
soroban/counter/: Cargo.toml  Makefile
soroban/counter/.bindings/counter-bindings/: README.md  package-lock.json  package.json
soroban/counter/.bindings/counter-bindings/src/: index.ts
soroban/counter/src/: contract.rs  test.rs
soroban/counter/test_snapshots/test/: test.1.json
soroban/cross-contract/: Cargo.toml  README.md
soroban/cross-contract/src/: cross_contract.rs  lib.rs  test.rs
soroban/cross-contract/test_snapshots/test/: test.1.json  test_successful_operations.1.json  test_unauthorized_role_assignment.1.json
typescript/: README.md  deno.json
typescript/src/infrastructure/horizon/: get-horizon-server.ts
typescript/src/use cases/classic/account/: create-account-with-trustline.ts  create-account.ts  generate-keypair.ts  initialize-with-friendbot.ts  sponsor-account.ts
typescript/src/use cases/classic/asset/: configure-flags.ts  create-asset-and-mint.ts
typescript/src/use cases/classic/authorization/: multisig.ts
typescript/src/use cases/classic/payment/: payment.ts
typescript/src/use cases/soroban/counter/: counter.ts  deno.json  import-map.json
typescript/src/use cases/soroban/events/: bindings.ts  deno.json  events.ts
typescript/src/utils/: logHashLink.ts
